[project]
name = "dolly"
version = "0.1.0"
description = "Autonomous camera dolly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gphoto2>=2.6.3",
    "pillow>=12.1.1",
    "pybricks>=3.5.0",
    "pybricks-ble",
    "pybricksdev>=1.0.0a52",
]

[tool.uv.sources]
pybricks-ble = { path = "../pybricks-ble", editable = true }
